<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="5dp"
    android:paddingTop="5dp" >

    <TextView
        android:id="@+id/tv_playername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/Name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black"
        android:typeface="serif" />

    <ImageView
        android:id="@+id/imgv_editplayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_playername"
        android:layout_alignParentRight="true"
        android:layout_marginRight="46dp"
        android:contentDescription="@string/Image_EditPlayers"
        android:src="@drawable/editplayer" />

    <ImageView
        android:id="@+id/imgv_deleteplayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imgv_editplayer"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/Image_DeletePlayers"
        android:src="@drawable/deleteteam" />

</RelativeLayout>
