<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/splash_back_color"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_screens_header" >

        <ImageView
            android:id="@+id/loginimage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Image_Login_Name"
            android:src="@drawable/loginheader" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/tv_databasedetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Enter_Database_Details"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/grey"
            android:textStyle="italic"
            android:typeface="serif" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tv_dbname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/Database_Name"
                    android:text="@string/Database_Name"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"
                    android:typeface="serif" />

                <EditText
                    android:id="@+id/tb_dbname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:typeface="serif" >

                    <requestFocus />
                </EditText>

            </TableRow>


            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tv_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/Password"
                    android:text="@string/Password"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"
                    android:typeface="serif" />

                <EditText
                    android:id="@+id/tb_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:typeface="serif" />

            </TableRow>

        </TableLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/Login"
        android:textStyle="bold"
        android:typeface="serif" />

    <Button
        android:id="@+id/btn_newdb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/Create_New_Database"
        android:textStyle="bold"
        android:typeface="serif" />

</LinearLayout>