<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/splash_back_color"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_screens_header" >

        <ImageView
            android:id="@+id/playersimage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Image_Players_Name"
            android:src="@drawable/playersheader" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/tv_AddPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Add_Player"
            android:drawableLeft="@drawable/addplayer"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/Add_Player"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black"
            android:typeface="serif" />

        <TextView
            android:id="@+id/tv_viewplayers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/View_Players"
            android:drawableLeft="@drawable/fetchprofiles"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/View_Players"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black"
            android:typeface="serif" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_newplayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/gradient_blue"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:visibility="invisible" >

        <TextView
            android:id="@+id/tv_playerdetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Players_Details"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:typeface="serif" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/Name"
                    android:text="@string/Name"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white"
                    android:typeface="serif" />

                <EditText
                    android:id="@+id/tb_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:typeface="serif" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tv_birthdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/BirthDate"
                    android:text="@string/BirthDate"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white"
                    android:typeface="serif" />

                <EditText
                    android:id="@+id/tb_birthdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:duplicateParentState="true"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="datetime"
                    android:longClickable="true"
                    android:textColor="@color/black"
                    android:typeface="serif" />

            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/Submit"
            android:textStyle="bold"
            android:typeface="serif" />

        <Button
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/Done"
            android:text="@string/Done"
            android:textStyle="bold"
            android:typeface="serif" />
    </LinearLayout>

</LinearLayout>