<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/splash_back_color"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >







        <ImageView
            android:id="@+id/gameimage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_screens_header"
            android:contentDescription="@string/Image_Game_Name"
            android:src="@drawable/gameheader" />

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_inningsdetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Enter_Team1_Details"
            android:text="@string/Enter_Innings_Details"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/grey"
            android:textStyle="italic"
            android:typeface="serif" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:paddingTop="5dp" >

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp" >

                <TextView
                    android:id="@+id/tv_Match"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/Match"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/tv_Match_Val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/red_end"
                    android:typeface="serif" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp" >

                <TextView
                    android:id="@+id/tv_Inning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/Inning"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/tv_Inning_Val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/red_end"
                    android:typeface="serif" />

            </TableRow>

            <TableRow
                android:id="@+id/TableRow03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp" >

                <TextView
                    android:id="@+id/tv_battingteam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableRight="@drawable/downarrow"
                    android:gravity="center_vertical"
                    android:text="@string/Batting_Team"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/tv_battingteamname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/red_end"
                    android:typeface="serif" />

            </TableRow>

            <TableRow
                android:id="@+id/TableRow04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp" >

                <TextView
                    android:id="@+id/tv_bowlingteam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Bowling_Team"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/tv_bowlingteamname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/red_end"
                    android:typeface="serif" />

            </TableRow>

        </TableLayout>




        <Button
            android:id="@+id/btn_startgame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/Start_Game"
            android:textStyle="bold"
            android:typeface="serif" />

    </LinearLayout>

</LinearLayout>